SERVER-27201 fix DocumentSourceGraphLookup to correctly propagate ExpressionContext